Video count on Folder Grid Item is wrong
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Prince Gupta changed milestone to %Qt redesign (VLC 4.0)
changed milestone to %Qt redesign (VLC 4.0)
- Prince Gupta added Component::Interface: Qt label
added Component::Interface: Qt label
- Developer
how many media are there actually in your folder, 12 or 14 ? is there non-video medias?
We explicitly ask the listing of "video" folders, but I suspect the count property returned by the medialibrary account for all medias
cc @chouquette
Collapse replies - Author Reporter
the folder has 12 videos but 2 subfolders with more videos. the subfolders also show up separately in the view.
- Developer
The subfolder shouldn't be accounted for. It could be a number of video vs any media, but it's also likely to be a bug in the triggers maintaining the count
- Please register or sign in to reply
- Prince Gupta changed the description
changed the description
- Developer
Could you provide your database?
Collapse replies - Author Reporter
here ml.db
- Developer
Thanks!
I can confirm that it's an issue with nb_media != nb_video, which will be fixed by both linked MRs
1
- Hugo Beauzée-Luyssen mentioned in merge request !2055 (merged)
mentioned in merge request !2055 (merged)
- Pierre Lamot mentioned in merge request !2056 (merged)
mentioned in merge request !2056 (merged)
- Hugo Beauzée-Luyssen mentioned in commit 452c0aeb
mentioned in commit 452c0aeb
- Felix Paul Kühne closed with merge request !2056 (merged)
closed with merge request !2056 (merged)
- Pierre Lamot closed with commit 8dff08a9
closed with commit 8dff08a9
- Jean-Baptiste Kempf changed milestone to %4.0
changed milestone to %4.0