medialibrary: folder: Add nb_audio/nb_video counters

Refs #27054